--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -38,6 +38,7 @@ check_PROGRAMS = timer/timer_test sms/sms_test ussd/ussd_test		\
                  dtx/dtx_gsm0503_test					\
                  i460_mux/i460_mux_test					\
 		 bitgen/bitgen_test					\
+		 gad/gad_test						\
 		 $(NULL)
 
 if ENABLE_MSGFILE
@@ -281,6 +282,9 @@ i460_mux_i460_mux_test_LDADD = $(LDADD) $(top_builddir)/src/gsm/libosmogsm.la
 bitgen_bitgen_test_SOURCES = bitgen/bitgen_test.c
 bitgen_bitgen_test_LDADD = $(LDADD)
 
+gad_gad_test_SOURCES = gad/gad_test.c
+gad_gad_test_LDADD = $(LDADD) $(top_builddir)/src/gsm/gad.o
+
 # The `:;' works around a Bash 3.2 bug when the output is not writeable.
 $(srcdir)/package.m4: $(top_srcdir)/configure.ac
 	:;{ \
@@ -361,6 +365,7 @@ EXTRA_DIST = testsuite.at $(srcdir)/package.m4 $(TESTSUITE)		\
 	     exec/exec_test.ok exec/exec_test.err \
 	     i460_mux/i460_mux_test.ok \
 	     bitgen/bitgen_test.ok \
+	     gad/gad_test.ok \
 	     $(NULL)
 
 if ENABLE_LIBSCTP
